src/objects/Revamp_Project__c.object
<CustomObject>
    <description>Custom Object built to house and track the User Stories for the Revamp Project - both the foundation/clean up and enhancement phases.</description>
    <fields>
        <fullName>Details_Comments__c</fullName>
        <label>Details/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GS_User_Story__c</fullName>
        <label>GS User Story #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Revamp_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress/Development</fullName>
                </value>
                <value>
                    <fullName>Waiting on Others</fullName>
                </value>
                <value>
                    <fullName>In Test</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Revamp Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GS_User_Story__c</columns>
        <columns>Phase__c</columns>
        <columns>Title__c</columns>
        <columns>Points__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Foundation</fullName>
        <columns>NAME</columns>
        <columns>GS_User_Story__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Points__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Title__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>equals</operation>
            <value>Foundation</value>
        </filters>
        <label>Foundation</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000000}</displayFormat>
        <label>Revamp Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revamp Project</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>